--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
   </head>
   <body>
     <header>
-      <a href="Web" target="_blank">WebStudio</a>
       <nav>
+        <a href="/index.html" target="_blank">WebStudio</a>
         <ul>
           <li><a href="#" target="_blank">Studio</a></li>
           <li><a href="#" target="_blank">Portfolio</a></li>
           <li><a href="#" target="_blank">Contacts</a></li>
         </ul>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h2>Our features</h2>
         <ul>
@@ -60,6 +62,7 @@
       </section>
       <section>
         <h2>Our Team</h2>
+        <h3>Our Team</h3>
         <ul>
           <li>
             <img src="./images/Mark.png" alt="Mark Guerrero" width="264" />
