змінив формат фото

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html" target="_blank">WebStudio</a>
+        <a href="./index.html" target="_blank">WebStudio</a>
         <ul>
           <li><a href="#" target="_blank">Studio</a></li>
           <li><a href="#" target="_blank">Portfolio</a></li>
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -65,22 +65,22 @@
         <h3>Our Team</h3>
         <ul>
           <li>
-            <img src="./images/Mark.png" alt="Mark Guerrero" width="264" />
+            <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom.png" alt="Tom Ford" width="264" />
+            <img src="./images/Tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Camila.png" alt="Camila Garcia" width="264" />
+            <img src="./images/Camila.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Daniel.png" alt="Daniel Wilson" width="264" />
+            <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -88,7 +88,7 @@
       </section>
     </main>
     <footer>
-      <a href="Web" target="_blank">WebStudio</a>
+      <a href="./index.html" target="_blank">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
